handlers for user management created

--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
     "start": "node ./dist/src/index.js",
     "compile": "tsc -p ./tsconfig.json",
     "dev": "ts-node-dev --respawn ./src/index.ts",
-    "seed": "prisma db seed",
-    "seed-users": "ts-node ./src/seed-users.ts",
-    "seed-data": "ts-node ./prisma/seed.ts",
-    "seed-init": "ts-node ./prisma/initSeed.ts",
-    "test-sub": "ts-node ./prisma/testSubscription.ts",
-    "test-sub2": "ts-node ./prisma/test2Subscription.ts",
+    "seed-Admin": "ts-node ./prisma/createAdmin.ts",
     "test": "TEST=true jest",
     "test:watch": "TEST=true jest --watch",
     "postgres:start": "docker-compose up -d",
@@ -21,8 +16,7 @@
     "migrate:reset": "prisma migrate reset",
     "migrate:create": "prisma migrate dev --create-only",
     "migrate:dev": "prisma migrate dev",
-    "migrate:deploy": "prisma migrate deploy",
-    "prisma:generate": "prisma generate"
+    "migrate:deploy": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "Atogebania Alexander",
@@ -33,6 +27,7 @@
     "@hapi/vision": "^7.0.3",
     "@prisma/client": "^6.4.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "fs-extra": "^11.3.0",
     "hapi-graceful-pm2": "^1.0.17",
@@ -43,7 +38,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/hapi-auth-jwt2": "^8.0.2",
+    "@types/hapi-auth-jwt2": "^8.6.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
     "@types/winston": "^2.4.4",
