--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/hapi-auth-jwt2": "^8.6.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
+    "@types/nodemailer": "^6.4.15",
     "@types/winston": "^2.4.4",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
